# snail-soup

./: LICENSE
backend/snail-soup-micoservices/: build.gradle.kts  (+2 more)
backend/snailsoup-auth/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
backend/snailsoup-auth/.sqlx/: query-1d022a19ee3b083e61573e0e21f0c1fc710d642d67c62b1c42d2faca26347a15.json  query-57be516e9068d179fecd6638fcc1471ff81a6b53896a4e9446f55746ddffee1e.json  query-b68bc4709c88cd65b662b9ce195cf9a72b3f5e5d5ed51b5854b1204ea23083f8.json  query-c4ca96f7e97cfa496c279a9740dc25c00b095cf08b2bf6db7abf5714fe93760f.json
backend/snailsoup-auth/migrations/: 20231023191316_init.up.sql  20231122170920_demo_data.down.sql  20231122170920_demo_data.up.sql
backend/snailsoup-auth/src/: app_state.rs  config.rs  main.rs
backend/snailsoup-auth/src/db/: mod.rs  schema.rs  user_repository.rs
backend/snailsoup-auth/src/features/: mod.rs  response.rs  swagger.rs
backend/snailsoup-auth/src/features/user/: api.rs  handlers.rs  mod.rs
backend/snailsoup-auth/src/services/: auth.rs
documentation/: backend.drawio
snailsoup-backend/: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init.sql
snailsoup-backend/.sqlx/: query-0347f0ebfb87f4b95211d68b31b0451b70c274468eddd522f825efd0fe2bb523.json  query-263fbaed308d6fc61f16b48105c17e07758de6425751c9649160afaaf35fa998.json  query-297e32b1967540ffb9e056938fb116094fb1003347b3793faebf408cd73fd492.json  query-2b305a99c660b5115252e9950d25f489aaf3ef76f4491d0705d850f34829a206.json  query-2b8d260d9a487c717dd08bec11152c68e33e1a23a825b2663da6f97018815131.json  query-4439cd5b04b29ec2749da451309d8cf9d880bc73eea0eb1200af014a01510221.json  query-543ce1589257d721b1880546e98bc76d8c57ec5e1ff123400a6eab1a3f1fbc91.json  query-78a1f7b0899cd4c8ba40b4ab5024af0c3f66d1018464af9882ef0d5b26a3b9b5.json  query-7dcef4001dcbb34ed22581761594269401843f61de36c4debd89ad589558b364.json  query-7df997e832a37aa35d4bace1eca73c8d7aac58863582c3b34da1f0b825e41551.json  query-94c0cee6e75f4f73a5a5dd2455baddb50cb0de39ebe2cd644ddef3bb26065c5d.json  query-9a9a0a3335691e76159f47123be2c64188e2ce1dd59ff762b768db32a21d0577.json  query-a8bac13ffc7780908781bc0aac9e493ae400becd111eaab633c0e77aff37f297.json  query-b500b2f06bfeb3df644e9db163d9e061b0bee1d6793fca02ffc5febf6d446291.json  query-bb639907986e8545997763905afe5399c042f619246ae852a84bf8129447fc45.json  query-be7078c304c911d1fad1d500f473329a8a51759eca6220ebfd707cf0f61fa001.json  query-c9460321ff300dfc82ce1a471566ff938da872c4d7bf973abce299af8e69b0e4.json  query-d45ad2f0e563b6bf4a3fb3a93be6a596a095dfc5a673cd195bd4789cdc144f96.json  query-ea0ecdf739cd5bff1849ee08fdf8d02d2fc539a7d1d11259f17dcdc25ba01d3c.json  query-fb9a12af21cb5974c8491b54502931f86edf90fa321cec608cb62bb69ce6176c.json
snailsoup-backend/migrations/: 20231023191316_init.down.sql  20231023191316_init.up.sql  20231122170920_demo_data.down.sql  20231122170920_demo_data.up.sql
snailsoup-backend/src/: app_state.rs  config.rs  main.rs
snailsoup-backend/src/db/: expense_repository.rs  mod.rs  schema.rs  user_repository.rs
snailsoup-backend/src/domain/: app_user.rs  expense.rs  expense_category.rs  mod.rs
snailsoup-backend/src/features/: mod.rs  swagger.rs  user_axum.rs
snailsoup-backend/src/features/auth/: api.rs  handlers.rs  middleware.rs  mod.rs
snailsoup-backend/src/features/expense/: admin_handlers.rs  api.rs  handlers.rs  mod.rs
snailsoup-backend/src/features/user/: admin_handlers.rs  api.rs  handlers.rs  mod.rs
snailsoup-backend/src/openapi/: api_doc.rs  mod.rs  security.rs
snailsoup-backend/src/services/: auth.rs  expense.rs  mod.rs  user.rs
snailsoup-backend/src/services/auth/: token_claim.rs
snailsoup-backend/src/utils/: mod.rs  period.rs
snailsoup-expenses/: build.gradle.kts  compose.yaml  settings.gradle.kts
(+18 files in other folders)
