[package]
name = "snailsoup-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

async-trait = { version = "0.1.74" }
uuid = { version = "1.5.0" }
chrono = { version = "0.4.31" }
rust_decimal = { version = "1.33.1" }
tokio = { version = "1.33", features = ["full"] }
sqlx = { version = "0.7.2", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "time",
    "chrono",
    "rust_decimal",
] }
