[package]
name = "snailsoup-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uuid = { version = "1.5.0", features = ["serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
rust_decimal = { version = "1.33.1", features = ["serde-float"] }
tokio = { version = "1.34", features = ["full"] }
sqlx = { version = "0.7.2", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "time",
    "chrono",
    "rust_decimal",
] }
warp = {version = "0.3.6"}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}
utoipa = { version = "4.1.0", features = ["uuid", "decimal_float", "chrono"] }
utoipa-swagger-ui = { version = "5.0.0"}