[package]
name = "snailsoup-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.33", features = ["serde-float"] }

sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "time",
    "chrono",
    "rust_decimal",
] }

tokio = { version = "1.34", features = ["full"] }
tower = {version = "0.4"}
axum = {version = "0.7"}

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0"}

utoipa = { version = "4.1", features = ["uuid", "decimal_float", "chrono", "axum_extras", "preserve_order"] }
utoipa-swagger-ui = { version = "5.0", features = ["axum"]}
utoipa-redoc = { version="2.0", features = ["axum"] }
utoipa-rapidoc = { version="2.0", features = ["axum"] }

dotenv = {version = "0.15"}
jsonwebtoken = {version = "9.2"}
argon2 = "0.5"