[package]
name = "snailsoup-auth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "snailsoup"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uuid = { version = "1.7.0", features = ["serde", "v4"] }
chrono = { version = "0.4.39", features = ["serde"] }
rust_decimal = { version = "1.34.3", features = ["serde-float"] }

sqlx = { version = "0.7.4", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "uuid",
    "time",
    "chrono",
    "rust_decimal",
] }

tokio = { version = "1.36.0", features = ["full"] }
tower = {version = "0.4.13"}
axum = {version = "0.7.9"}

serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134"}

utoipa = { version = "4.2.3", features = ["uuid", "decimal_float", "chrono", "axum_extras", "preserve_order"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"]}
utoipa-redoc = { version="4.0", features = ["axum"] }
utoipa-rapidoc = { version="4.0.0", features = ["axum"] }

dotenvy = {version = "0.15.7"}
jsonwebtoken = {version = "9.3.0"}
argon2 = "0.5.3"